--- a/src/main/webapp/novo.html
+++ b/src/main/webapp/novo.html
@@ -9,18 +9,22 @@
 <body>
 	<h1>Criar novo contato</h1>
 	<form name="frmcontato" action="insert">
-	<table>
-		<tr>
-			<td><input type="text" name="nome" placeholder="Nome" class="caixa1"></td>
-		</tr>
-		<tr>
-			<td><input type="text" name="fone" placeholder="Fone" class="caixa2 "></td>
-		</tr>
-		<tr>
-			<td><input type="text" name="email" placeholder="E-mail" class="caixa1"></td>
-		</tr>
-	</table>
-	<input type="button" value="Adicionar" class="Botao1" onclick= "validar()">
+		<table>
+			<tr>
+				<td><input type="text" name="nome" placeholder="Nome"
+					class="caixa1"></td>
+			</tr>
+			<tr>
+				<td><input type="text" name="fone" placeholder="Fone"
+					class="caixa2 "></td>
+			</tr>
+			<tr>
+				<td><input type="text" name="email" placeholder="E-mail"
+					class="caixa1"></td>
+			</tr>
+		</table>
+		<input type="button" value="Adicionar" class="Botao1"
+			onclick="validar()">
 	</form>
 </body>
 <script src="scripts/validador.js"></script>
